--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -6,13 +6,14 @@
             <a href="">Shop</a>
             <a href="">Contact</a>
         </nav>
+        <div class="flex gap-3 align-middle">
+            <a matBadge="5" matBadgeSize="large" class="custom-badge mt-2 mr-2">
+                <mat-icon>shopping_cart</mat-icon>
+            </a>
+            <button mat-stoked-button>Login</button>
+            <button mat-stoked-button>Register</button>
+    
+        </div>
     </div>
-    <div class="flex gap-3 align-middle">
-        <a matBadge="5" matBadgeSize="large">
-            <mat-icon>shopping_cart</mat-icon>
-        </a>
-        <button mat-stoked-button>Login</button>
-        <button mat-stoked-button>Login</button>
-
-    </div>
+    
 </header>
