--- a/client/src/app/features/shop/product-item/product-item.component.html
+++ b/client/src/app/features/shop/product-item/product-item.component.html
@@ -1,6 +1,6 @@
 @if (product){
     <div>
-        <mat-card appearance="raised">
+        <mat-card appearance="raised" routerLink="/shop/{{product.id}}" class="product-card">
             <img src="{{product.pictureUrl}}" alt="images of {{product.name}}">
             <mat-card-content>
                 <h2 class="text-sm font-semibold uppercase">{{product.name}}</h2>
